Initial Draft: Week 1 - Day 6

--- a/www/blog/2021-05-07.md
+++ b/www/blog/2021-05-07.md
@@ -1,21 +1,98 @@
 ---
 slug: previewing-swa
 title: "#06: Previewing SWA"
-authors: [michail]
+authors: [nitya, michail]
 tags: [swa, 30days, core-concepts]
 draft: true 
 ---
 
 Welcome to `Week 1, Day 6` of **#30DaysOfSWA**!! 
 
-Yesterday we talked about .... Today we'll explore ...
+We're almost at the end of week 1!! 🎉 
+
+So far, we've learned how we can use the _static assets hosting_ (Azure Static Web Apps) and _serverless API_ (Azure Functions) capabilities to build and deploy a web application in a scalable and cost-effective way. And we learned to _configure_ and _secure_ our Static Web App to suit our needs. So what else do we need to talk about?
+
+**Deployment** options? Let's do it!! We've talked about the default experience so far: deploy from a _production_ branch, using _GitHub_ Actions for CI/CD. But how do we handle **previewing** the Static Web App before production deploys? Let's talk about previewing SWA in pull requests, on non-production branches, and in pre-configured named environments that make our staging workflows more productive.
 
 
 ## What We'll Cover
- * 
- * 
- * 
- * **Exercise** 
- * **Resource(s):** 
+ * What types of deployment does SWA support?
+ * _Previewing_: in Pull Requests
+ * _Previewing_: in Non-Production Branches
+ * _Previewing_: in Named Environments
+ * _Deploying_: to Custom Domains
+ * **Exercise:** [Review PR using SWA Preview Capability](https://docs.microsoft.com/en-us/azure/static-web-apps/review-publish-pull-requests)
 
 ![](../static/img/series/06-banner.png)
+
+## Deployment Types
+
+When we think about deployment, we are typically thinking of two kinds of environments: _production_ which serve as the primary endpoint for real world use, and _staging_  that can be used for internal testing, early validation of preview releases.
+
+Azure Static Web Apps has built-in support for four types of environments:
+
+ * _Production_: This is the real world deployment endpoint that is **indexed by search engines**, and associated with the custom domain (if configured).
+ * _Pull Request (PR)_: This is a **temporary** environment setup for a Pull Request, and torn down when that PR is closed.
+ * _Branch_: This is a environment you can set up for non-production branches, at a **stable** URL for the lifetime of the branch.
+ * _Named_: The above environments have URLs that reflect their PR (number) or branch (name). You can also configure a **stable** preview environment with a fixed name, associated with some deployment context (e.g., an interim release)
+
+Production deploys have URLs like `<DEFAULT-HOSTNAME>-<NUMBER>.azurestaticapps.net` where the `HOSTNAME-NAME` combination ensures a unique URL for each application. 
+
+When using _preview_ environments, the URL becomes something like: `<DEFAULT_HOST_NAME>-<BRANCH_OR_ENVIRONMENT_NAME>.<LOCATION>.azurestaticapps.net` where the `LOCATION` reflects the deployment region, and the `NAME` can take the form of a number (e.g., for pull requests).
+
+Let's take a brief look at each of these.
+
+
+## Pull Requests
+
+Currently Pull Request _preview environments_ are available for projects hosted in GitHub, and configured to use GitHub Actions by Azure Static Web Apps:
+  * Every PR to a _watched branch_ gets a dedicated but **temporary** pre-production staging environment that is torn down when the PR is closed.
+  * Use these to validate changes, compare to production, or perform sanity checks.
+  * The environment is automatically rebuilt and deployed if new commits are pushed to the branch associated with an active PR.
+  * The staged environment is _publicly visible_ event if your GitHub repo is private, though the URL is not easily discoverable (i.e., not indexed by search engines).
+
+Learn more about [previewing Pull Requests in Azure Static Web Apps](https://docs.microsoft.com/en-us/azure/static-web-apps/review-publish-pull-requests).
+
+
+## Branches
+
+Preview environments for branches will have **stable** URLs. Configure them in the relevant _GitHub Actions_ or _Azure Pipelines_ workflow files as [shown in this example](https://docs.microsoft.com/en-us/azure/static-web-apps/branch-environments?tabs=github-actions#example). This involves two steps:
+ * set the `production_branch` property to the branch you want to deploy for real-world usage in the relevant build/deploy job.
+ * list all other branches that you want preview environments for under `trigger` (Azure Pipelines) or `push: branches` (in GitHub Actions).
+ * You can use a wildcare (`**` for GitHub Actions, `*` for Azure Pipelines) if you want to track _all_ branches for preview environment support.
+
+Learn how to [create branch preview environments in Azure Static Web Apps](https://docs.microsoft.com/en-us/azure/static-web-apps/branch-environments?tabs=github-actions).
+
+## Named Environments
+
+Learn about [named preview environments in Azure Static Web Apps](https://docs.microsoft.com/en-us/azure/static-web-apps/named-environments?tabs=github-actions)
+
+## Custom Domains
+
+---
+
+## How-Tos: Watch It!
+
+Prefer a Video Walkthrough to understand the process? We have you covered with the [Azure Tips And Tricks: Static Web Apps](https://docs.microsoft.com/en-us/shows/azure-tips-and-tricks-static-web-apps/) series. Check out this video to understand how you can setup a custom domain for your Static Web App!
+
+<iframe   width="560" height="315" frameborder="0"  src="https://aka.ms/docs/player?show=azure-tips-and-tricks-static-web-apps&ep=how-to-set-up-a-custom-domain-name-in-azure-static-web-apps-10-of-16--azure-tips-and-tricks-static-w"></iframe>
+
+---
+
+## Exercise: Try it!
+
+**Pull Requests** are critical to having a productive open source or multi-contributor project, so it's important to know how Azure Static Apps works in setting up **pre-production** environments for validating the changes proposed in a pull-request, before merging it for production deployment.
+
+Get hands-on experience with the process by completing [this tutorial](https://docs.microsoft.com/en-us/azure/static-web-apps/review-publish-pull-requests) on an existing Azure Static Web Apps project. 
+
+_At present, the staged pre-production environment for Pull Requests is available only for GitHub Actions deployments - so make sure you pick a GitHub-hosted SWA project that already had the default workflows set up_.
+
+---
+
+## Useful Resources
+
+1. [Preview environments in Azure Static Web Apps](https://docs.microsoft.com/en-us/azure/static-web-apps/preview-environments)
+2. [Pull-Request Preview Environments](https://docs.microsoft.com/en-us/azure/static-web-apps/review-publish-pull-requests)
+3. [Branch Preview Environments](https://docs.microsoft.com/en-us/azure/static-web-apps/branch-environments)
+4. [Named Preview Environments](https://docs.microsoft.com/en-us/azure/static-web-apps/named-environments)
+5. Video Series: [Azure Tips And Tricks - Static Web Apps](https://docs.microsoft.com/en-us/shows/azure-tips-and-tricks-static-web-apps/)
