Week 1, Day 6 Post => Ready

--- a/www/blog/2021-05-07.md
+++ b/www/blog/2021-05-07.md
@@ -38,7 +38,7 @@ Azure Static Web Apps has built-in support for four types of environments:
 
 Production deploys have URLs like `<DEFAULT-HOSTNAME>-<NUMBER>.azurestaticapps.net` where the `HOSTNAME-NAME` combination ensures a unique URL for each application. 
 
-When using _preview_ environments, the URL becomes something like: `<DEFAULT_HOST_NAME>-<BRANCH_OR_ENVIRONMENT_NAME>.<LOCATION>.azurestaticapps.net` where the `LOCATION` reflects the deployment region, and the `NAME` can take the form of a number (e.g., for pull requests).
+With _preview_ environments, the URL looks like: `<DEFAULT_HOSTNAME>-<BRANCH_OR_ENVIRONMENT_NAME>.<LOCATION>.azurestaticapps.net` where the `LOCATION` reflects the deployment region, and the `NAME` can also take the form of a number (e.g., for pull requests).
 
 Let's take a brief look at each of these.
 
@@ -47,27 +47,114 @@ Let's take a brief look at each of these.
 
 Currently Pull Request _preview environments_ are available for projects hosted in GitHub, and configured to use GitHub Actions by Azure Static Web Apps:
   * Every PR to a _watched branch_ gets a dedicated but **temporary** pre-production staging environment that is torn down when the PR is closed.
-  * Use these to validate changes, compare to production, or perform sanity checks.
-  * The environment is automatically rebuilt and deployed if new commits are pushed to the branch associated with an active PR.
-  * The staged environment is _publicly visible_ event if your GitHub repo is private, though the URL is not easily discoverable (i.e., not indexed by search engines).
+  * Use it to validate changes, perform sanity checks, etc.
+  * The environment is automatically rebuilt and deployed if new commits are made to the branch associated with an active PR.
+  * The staged environment is _publicly visible_ event if your GitHub repo is private - though the URL is not easily discoverable (i.e., not indexed by search engines) by default.
 
-Learn more about [previewing Pull Requests in Azure Static Web Apps](https://docs.microsoft.com/en-us/azure/static-web-apps/review-publish-pull-requests).
+Learn how to [preview Pull Requests in Azure Static Web Apps](https://docs.microsoft.com/en-us/azure/static-web-apps/review-publish-pull-requests).
 
 
 ## Branches
 
-Preview environments for branches will have **stable** URLs. Configure them in the relevant _GitHub Actions_ or _Azure Pipelines_ workflow files as [shown in this example](https://docs.microsoft.com/en-us/azure/static-web-apps/branch-environments?tabs=github-actions#example). This involves two steps:
- * set the `production_branch` property to the branch you want to deploy for real-world usage in the relevant build/deploy job.
+Preview environments for branches will have **stable** URLs. Configure them in the relevant _GitHub Actions_ or _Azure Pipelines_ workflow files as [shown in this example](https://docs.microsoft.com/en-us/azure/static-web-apps/branch-environments?tabs=github-actions#example). 
+
+For example, in a GitHub Actions context, this involves two steps:
+ * set the `production_branch` property to the branch you want to use as the source for that production deployment.
  * list all other branches that you want preview environments for under `trigger` (Azure Pipelines) or `push: branches` (in GitHub Actions).
- * You can use a wildcare (`**` for GitHub Actions, `*` for Azure Pipelines) if you want to track _all_ branches for preview environment support.
+
+You can use a wildcare (`**` for GitHub Actions, `*` for Azure Pipelines) if you want to track _all_ branches for preview environment support. 
+
+Here's an example GitHub Actions config file - the **production** environment is built from the _main_ branch, and separate **preview** environments are built for the other listed branches (_dev_ and _staging_).
 
 Learn how to [create branch preview environments in Azure Static Web Apps](https://docs.microsoft.com/en-us/azure/static-web-apps/branch-environments?tabs=github-actions).
+ 
+```
+name: Azure Static Web Apps CI/CD
 
-## Named Environments
+on:
+  push:
+    branches:
+      - main
+      - dev
+      - staging
+  pull_request:
+    types: [opened, synchronize, reopened, closed]
+    branches:
+      - main
+
+jobs:
+  build_and_deploy_job:
+    ...
+    name: Build and Deploy Job
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
+      - name: Build And Deploy
+        id: builddeploy
+        uses: Azure/static-web-apps-deploy@v1
+        with:
+          ...
+          production_branch: "main"
+```
+
+
+## Named Envs
+
+Sometimes, you want to have a non-production preview environment that is at _stable_ URL (not tied to a specific PR number or branch name), and that gets rebuilt on commits to _all tracked branches_ in the configuration file. 
+
+Just like with branches, this requires a manual change to your default configuration file (GitHub Actions or Azure Pipelines) as [shown in this example](https://docs.microsoft.com/en-us/azure/static-web-apps/named-environments?tabs=github-actions#configuration).
+
+In the GitHub Actions case, the steps are:
+ * Set the `deployment_environment` property (in the relevant build job) to be the **name** you want to use for this preview environment
+ * List the branches you want associated with this named environment under `push: branches` - commits to those will result in rebuild/deploy to this environment.
+
+Here's an example GitHub Actions configuration file - this sets up a named environment called **release** which gets updated when changes are made to **any** branch (reflected by the `**` wildcard), and deployed to a site with a URL like `<DEFAULT_HOST_NAME>-release.<LOCATION>.azurestaticapps.net`.
 
 Learn about [named preview environments in Azure Static Web Apps](https://docs.microsoft.com/en-us/azure/static-web-apps/named-environments?tabs=github-actions)
 
+```
+name: Azure Static Web Apps CI/CD
+
+on:
+  push:
+    branches:
+      - "**"
+  pull_request:
+    types: [opened, synchronize, reopened, closed]
+    branches:
+      - main
+
+jobs:
+  build_and_deploy_job:
+    ...
+    name: Build and Deploy Job
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
+      - name: Build And Deploy
+        id: builddeploy
+        uses: Azure/static-web-apps-deploy@v1
+        with:
+          ...
+          deployment_environment: "release"
+```
+
+
 ## Custom Domains
+
+You may have noticed that default deployment URLs - in the form `XXX.azurestaticapps.net` for production environments or `XXX.<LOCATION>.azurestaticapps.net` for preview environments - are not exactly user friendly for use and recall. 
+
+Adding a custom domain helps. Azure Static Apps makes that easy with options to also configure **subdomains** and an **apex domain**! Here, given a domain like `www.azure.com`, `azure.com` is the apex domain and `www` is the relevant subdomain.
+
+So how do you configure these? You have two options:
+* Use an **external DNS Provider** (if your domain registrar supports it)
+* Use **Azure DNS** (to manage your DNS domain, even if purchased elsewhere)
+
+To keep this post short, we won't go into details for each of these options. Instead check out these links based on the direction you want to go in:
+ * Setup Apex Domain - with [Azure DNS](https://docs.microsoft.com/en-us/azure/static-web-apps/apex-domain-azure-dns) | with [External Provider](https://docs.microsoft.com/en-us/azure/static-web-apps/apex-domain-external)
+ * Setup Subdomain - with [Azure DNS](https://docs.microsoft.com/en-us/azure/static-web-apps/custom-domain-azure-dns) | with [External Provider](https://docs.microsoft.com/en-us/azure/static-web-apps/custom-domain-external)
 
 ---
 
@@ -96,3 +183,4 @@ _At present, the staged pre-production environment for Pull Requests is availabl
 3. [Branch Preview Environments](https://docs.microsoft.com/en-us/azure/static-web-apps/branch-environments)
 4. [Named Preview Environments](https://docs.microsoft.com/en-us/azure/static-web-apps/named-environments)
 5. Video Series: [Azure Tips And Tricks - Static Web Apps](https://docs.microsoft.com/en-us/shows/azure-tips-and-tricks-static-web-apps/)
+6. [About Custom Domains](https://docs.microsoft.com/en-us/azure/static-web-apps/custom-domain)
