Week 1, Day 6 Post => Reviewed

--- a/www/blog/2021-05-07.md
+++ b/www/blog/2021-05-07.md
@@ -3,7 +3,7 @@ slug: previewing-swa
 title: "#06: Previewing SWA"
 authors: [nitya, michail]
 tags: [swa, 30days, core-concepts]
-draft: true 
+draft: false
 ---
 
 Welcome to `Week 1, Day 6` of **#30DaysOfSWA**!! 
