Article draft - PWA

--- a/www/blog/2021-05-14.md
+++ b/www/blog/2021-05-14.md
@@ -1,20 +1,18 @@
 ---
-slug: build-as-pwa
-title: "#13: Build SWA as PWA"
-authors: []
+slug: pwa-on-swa
+title: "#13: Hosting PWA on Static Web Apps"
+authors: [Maxim Salnikov]
 tags: [swa, 30days, usage-examples]
 draft: true 
 ---
 Welcome to `Week 2, Day 6` of **#30DaysOfSWA**!! 
 
-Yesterday we talked about .... Today we'll explore ...
-
+Yesterday we talked about deploying Blazor apps on Static Web Apps. Let's continue today with one more type of the projects you can successfully host on SWA - Progressive Web Apps (PWAs).
 
 ## What We'll Cover
- * 
- * 
- * 
- * **Exercise** 
- * **Resource(s):** 
+ * How do I start with building a PWA?
+ * Optimized PWA-on-SWA configuration
+ * Advanced techniques for better user experience
+ * **Exercise:** [`Fork and host this PWA on SWA Starter](https://github.com/webmaxru)
 
 ![](../static/img/series/banner.png)
