--- a/www/blog/2021-05-15.md
+++ b/www/blog/2021-05-15.md
@@ -1,7 +1,7 @@
 ---
 slug: build-with-vuejs
 title: "#14: Build SWA With Vue.js"
-authors: []
+authors: [Jen Looper]
 tags: [swa, 30days, usage-examples]
 draft: true 
 ---
