Week 2, Day 1 => Ready

--- a/www/blog/2021-05-26.md
+++ b/www/blog/2021-05-26.md
@@ -1,5 +1,5 @@
 ---
-slug: practices-cognitive-search
+slug: practices-case-study
 title: "#25: KlipTok & SWA: Case Study"
 authors: []
 tags: [swa, 30days, best-practices]
