--- a/www/blog/2021-05-28.md
+++ b/www/blog/2021-05-28.md
@@ -1,5 +1,5 @@
 ---
-slug: practices-cognitive-search
+slug: practices-cosmosdb
 title: "#27: CosmosDB & SWA"
 authors: []
 tags: [swa, 30days, best-practices]
