--- a/www/blog/2021-05-29.md
+++ b/www/blog/2021-05-29.md
@@ -1,5 +1,5 @@
 ---
-slug: practices-cognitive-search
+slug: practices-tips-tricks
 title: "#28: SWA Tips & Tricks"
 authors: []
 tags: [swa, 30days, best-practices]
