Week 2, Day 1 => Reviewed

--- a/www/blog/2021-05-09.md
+++ b/www/blog/2021-05-09.md
@@ -2,7 +2,7 @@
 slug: build-with-astro
 title: "#08: Build A Blog - with Astro"
 authors: [glaucia]
-tags: [swa, 30days, usage-examples]
+tags: [swa, 30days, usage-examples, astro]
 draft: false
 ---
 
@@ -36,7 +36,7 @@ Today's post will however focus on [Astro](https://astro.build/blog/introducing-
 
 Astro emphasizes **fast performance** with **less JavaScript** - and takes a [partial hydration](https://www.patterns.dev/posts/progressive-hydration/) approach that allows it to load the minimal required amount of JavaScript, if and when absolutely necessary. Here's a quick overview of Astro.
 
-<iframe width="702" height="395" src="https://www.youtube.com/embed/dsTXcSeAZq8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe  width="560" height="315" frameborder="0" allowfullscreen src="https://www.youtube.com/embed/dsTXcSeAZq8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" ></iframe>
 
 
 ## Astro + SWA
