Week 2, Day 3 => Ready

--- a/www/blog/2021-05-10.md
+++ b/www/blog/2021-05-10.md
@@ -1,7 +1,7 @@
 ---
 slug: build-with-react
-title: "#09: Build SWA With React"
-authors: []
+title: "#09: Manage Inventory With React"
+authors: [chris]
 tags: [swa, 30days, usage-examples]
 draft: true 
 ---
@@ -18,4 +18,4 @@ Yesterday we talked about .... Today we'll explore ...
  * **Exercise** 
  * **Resource(s):** 
 
-![](../static/img/series/banner.png)
+![](../static/img/series/09-banner.png)
