Week 2, Day 2 => Reviewed

--- a/www/blog/2021-05-10.md
+++ b/www/blog/2021-05-10.md
@@ -3,7 +3,7 @@ slug: build-with-react
 title: "#09: Manage Inventory With React"
 authors: [chris]
 tags: [swa, 30days, usage-examples, react]
-draft: true 
+draft: false
 ---
 
 Welcome to `Week 2, Day 2` of **#30DaysOfSWA**!! 
