Week 2, Day 3 => Reviewed

--- a/www/blog/2021-05-01.md
+++ b/www/blog/2021-05-01.md
@@ -68,6 +68,14 @@ Articles are written by a multi-disciplinary team of contributors from across Mi
 We'll keep this page updated on a daily basis, to reflect the latest author whose post was published. We'll kick things off with the authors of this post.
  * **Nitya Narasimhan**, Senior Cloud Advocate @Microsoft
  * **Reshmi Sriram**, Static Web Apps PM @Microsoft
+ * **Simona Cotin**, Principal PM @Microsoft 
+ * **Glaucia Lemos**, JS Cloud Advocate @Microsoft
+ * **Anthony Chu**, Senior Product PM @Microsoft
+ * **Joseph Lin** Software Engineer @Microsoft, 
+ * **Mitali Karmarkar**, Software Engineer @Microsoft
+ * **Michail Shaposhnikov**, Software Engineer @Microsoft
+ * **Chris Noring**, Senior Cloud Advocate @Microsoft
+ * **Jen Looper**, Principal Cloud Advocate @Microsoft
  * _to be updated daily ..._
 
 Each post will identify the authors by name, and link to a relevant online profile. This series is a labor of love, so if you like a post - show that author some love by providing feedback or saying hello on their identified profile!
