--- a/www/blog/2021-05-10.md
+++ b/www/blog/2021-05-10.md
@@ -1,6 +1,6 @@
 ---
 slug: build-with-react
-title: "#09: Manage Inventory With React"
+title: "#09: Manage Inventory - with React"
 authors: [chris]
 tags: [swa, 30days, usage-examples, react]
 draft: false
