--- a/www/blog/2021-05-12.md
+++ b/www/blog/2021-05-12.md
@@ -1,6 +1,6 @@
 ---
 slug: build-with-docusaurus
-title: "#11: Build SWA with Docusaurus"
+title: "#11: Build SWA - with Docusaurus"
 authors: [nitya]
 tags: [swa, 30days, usage-examples]
 draft: true 
