--- a/www/blog/2021-05-11.md
+++ b/www/blog/2021-05-11.md
@@ -1,9 +1,9 @@
 ---
 slug: build-with-vuejs
-title: "#10: Get Creative With Vue.js"
+title: "#10: Get Creative - with Vue.js"
 authors: [jen]
 tags: [swa, 30days, usage-examples]
-draft: true 
+draft: false 
 ---
 
 Welcome to `Week 2, Day 3` of **#30DaysOfSWA**!! 
