Minor roadmap restructuring/edits

--- a/www/blog/2021-05-17.md
+++ b/www/blog/2021-05-17.md
@@ -1,6 +1,6 @@
 ---
-slug: devtools-azure
-title: "#16: Develop with Azure"
+slug: devtools-playwright
+title: "#16: Test with Playwright"
 authors: []
 tags: [swa, 30days, dev-tools]
 draft: true 
