--- a/www/blog/2021-05-19.md
+++ b/www/blog/2021-05-19.md
@@ -1,6 +1,6 @@
 ---
 slug: devtools-msedge
-title: "#18: Develop with MS Edge"
+title: "#18: Debug with Edge DevTools"
 authors: []
 tags: [swa, 30days, dev-tools]
 draft: true 
