--- a/www/blog/2021-05-22.md
+++ b/www/blog/2021-05-22.md
@@ -1,10 +1,11 @@
 ---
-slug: devtools-playwright
-title: "#21: Develop with Playwright"
+slug: devtools-vscode
+title: "#21: Develop With VSCode"
 authors: []
 tags: [swa, 30days, dev-tools]
 draft: true 
 ---
+
 Welcome to `Week 3, Day 7` of **#30DaysOfSWA**!! 
 
 Yesterday we talked about .... Today we'll explore ...
