--- a/www/blog/2021-05-16.md
+++ b/www/blog/2021-05-16.md
@@ -1,11 +1,10 @@
 ---
-slug: devtools-vscode
-title: "#15: Develop With VSCode"
+slug: devtools-azure
+title: "#15: Develop with Azure Tools"
 authors: []
 tags: [swa, 30days, dev-tools]
 draft: true 
 ---
-
 Welcome to `Week 3, Day 1` of **#30DaysOfSWA**!! 
 
 Yesterday we talked about .... Today we'll explore ...
