Week 2, Day 3 => Ready & Reviewed

--- a/www/blog/2021-05-13.md
+++ b/www/blog/2021-05-13.md
@@ -1,8 +1,8 @@
 ---
-slug: building-with-docusaurus
+slug: build-with-blazor
 title: "#12: Build SWA With Blazor"
 authors: []
-tags: [swa, 30days, usage-examples]
+tags: [swa, 30days, usage-examples, blazor]
 draft: true 
 ---
 
