Week 2, Day 6 => Ready / Reviewed

--- a/www/blog/2021-05-14.md
+++ b/www/blog/2021-05-14.md
@@ -1,9 +1,9 @@
 ---
 slug: pwa-on-swa
 title: "#13: Hosting PWA on Static Web Apps"
-authors: [Maxim Salnikov]
+authors: [max]
 tags: [swa, 30days, usage-examples]
-draft: true 
+draft: false
 ---
 Welcome to `Week 2, Day 6` of **#30DaysOfSWA**!! 
 
@@ -19,13 +19,15 @@ Yesterday we talked about deploying Blazor apps on Static Web Apps. Let's contin
 
 ## Progressive Web Applications
 
-A Progressive Web App (PWA) is a web frontend application that is progressively enhanced using open web technologies, to make sure it delivers the best possible experience on every device, based on available capabilities. The "baseline" for your app to have a title "progressive" is its installability and offline-readiness. We skip the "served with https" requirement because it became a baseline for any web app these days.
+A **Progressive Web App (PWA)** is a web frontend application that is progressively enhanced using open web technologies, to make sure it delivers the best possible experience on every device, based on available capabilities. The "baseline" for your app to have a title "progressive" is its installability and offline-readiness. We skip the "served with https" requirement because it became a baseline for any web app these days.
 
-This chapter of #30DaysOfSWA assumes that you are familiar with the basic concepts of a Service Worker API and automating your service worker with the Workbox library. If you wish to learn about these technologies, you are welcome to go through the Core Concepts part of the [#30DaysOfPWA](https://aka.ms/30DaysOfPWA) project to learn about PWA fundamentals and to watch [Automating a service worker with the Workbox 6](https://www.youtube.com/watch?v=LILGt_pHk9M&ab_channel=NDCConferences) video for quickstart with Workbox.
+![#30DaysOfPWA - Core Concepts](../static/img/series/13-pwa-30days.jpg)
+
+This chapter of #30DaysOfSWA assumes that you are familiar with the basic concepts of a Service Worker API and automating your service worker with the Workbox library. If you wish to learn about these technologies, you are welcome to go through the Core Concepts part of the **[#30DaysOfPWA](https://aka.ms/30DaysOfPWA)** project (see roadmap above) to learn about PWA fundamentals and to watch **[Automating a service worker with the Workbox 6](https://www.youtube.com/watch?v=LILGt_pHk9M&ab_channel=NDCConferences)** video for quickstart with Workbox.
 
 ## Is hosting a PWA on Azure Static Web Apps different from "classic" apps?
 
-Progressive Web Application is still a web frontend app so the initial scaffolding of your SWA resource is the same - you have learned how to deploy and configure various types of web apps from the previous chapters of the #30DaysOfSWA. But to make sure that your "PWA on SWA" works as intended both online & offline to provide the best possible user & developer experiences, you might need to pay special attention to some implementation details and fine-tune some configuration options. We'll go through the following points in this chapter:
+A Progressive Web Application is still a web frontend app so the initial scaffolding of your SWA resource is the same - you have learned how to deploy and configure various types of web apps from the previous chapters of the #30DaysOfSWA. But to make sure that your "PWA on SWA" works as intended both online & offline to provide the best possible user & developer experiences, you might need to pay special attention to some implementation details and fine-tune some configuration options. We'll go through the following points in this chapter:
 
 - Building your service worker as a part of the overall app build
 - Setting up HTML5 routing - for the Single-Page Application (SPA) use-case
@@ -35,20 +37,24 @@ Progressive Web Application is still a web frontend app so the initial scaffoldi
 
 **Sample project**
 
-I created a [PWA on SWA Starter](https://github.com/webmaxru/pwa-on-swa) project with all the best practices implemented. The app is [hosted on SWA](https://aka.ms/pwa-on-swa) - let's explore it! Technical stack:
+I created a **[PWA on SWA Starter](https://github.com/webmaxru/pwa-on-swa)** project with all the best practices implemented. The app is [hosted on SWA](https://aka.ms/pwa-on-swa) as shown below. Let's explore it!
 
-- A React application scaffolded by the [create-react-app](https://reactjs.org/docs/create-a-new-react-app.html) tool. A simple SPA with a few routes and the possibility to call API endpoints. Please note: the approaches described in this chapter are applicable for any web frontend application: framework-based (including your custom frameworks) or "vanilla" JavaScript. We use React only for getting closer to the real-world scenario of the modern frontend app development when you have to perform some operations with your source code ("build the app") before the deployment.
+![PWA Starter on SWA](../static/img/series/13-pwa-starter.png)
+
+**Technical stack:**
+
+- A React application scaffolded by the [create-react-app](https://reactjs.org/docs/create-a-new-react-app.html) tool. A simple SPA with a few routes and the possibility to call API endpoints. Note that the approaches described are applicable for any web frontend application: **framework-based** (including your custom frameworks) or **"vanilla" JavaScript**. We use React only for getting closer to the real-world scenario of the modern frontend app development when you have to perform some operations with your source code ("build the app") before the deployment.
 - A [service worker](https://github.com/webmaxru/pwa-on-swa/blob/main/src/sw/service-worker.js) powered by the [Workbox](https://workboxjs.org) library.
 - Two API endpoints created within SWA resource - to emulate "dynamic" (`/api/news`) and "conservative" (`/api/archives`) data sources.
 
 ## Building your service worker as a part of the overall app build
 
-A service worker file we have in the `src/sw` folder of the application is not ready for the deployment: we have to
+The service worker file we have in the `src/sw` folder of the application is not ready for the deployment. We have to
 
-1. [Process it](https://github.com/webmaxru/pwa-on-swa/blob/main/scripts/sw-build.js) by the `workbox-build` module to populate with the resources to precache (to provide offline-readiness)
-2. Bundle it
-3. Choose production or development mode
-4. Minify
+1. **[Process it](https://github.com/webmaxru/pwa-on-swa/blob/main/scripts/sw-build.js)** by the `workbox-build` module to populate with the resources to precache (to provide offline-readiness)
+2. **Bundle it**
+3. **Choose** production or development mode
+4. **Minify** for deployment
 
 This is why in `package.json`'s `scripts` we have `"build-sw": "node scripts/sw-build.js && npx rollup -c"` command that is building a service worker file and copies it into the app distribution folder.
 
@@ -60,7 +66,7 @@ By default, Azure Static Web Apps runs `npm run build` command to build your app
 
 Instead of `react-scripts build`, there might be a command to build an application using a framework/bundler of your choice. **Important**: Keep this order - you always build a service worker _after_ the main application because the distribution folder will be scanned to list the files to precache based on the [pattern](https://github.com/webmaxru/pwa-on-swa/blob/main/scripts/sw-build.js#L5) you provided.
 
-## Setting up HTML5 routing - for the Single-Page Application (SPA) use-case
+## Setting up HTML5 routing - for the Single-Page Application (SPA)
 
 For having correct navigation in your single-page application, you have to "ask" the webserver to redirect all navigation requests to `index.html` - to run the application and let it do the routing. In SWA, you have to have something like this in the [configuration file](https://github.com/webmaxru/pwa-on-swa/blob/main/staticwebapp.config.json):
 
@@ -152,6 +158,7 @@ For this exercise:
 ---
 
 ## Resources
+
 
 Here are some resources to get you started with your Progressive Web App journey into 
 
