--- a/www/blog/2021-05-17.md
+++ b/www/blog/2021-05-17.md
@@ -1,20 +1,30 @@
 ---
 slug: devtools-playwright
-title: "#16: Test with Playwright"
-authors: []
+title: "#16: Test Automation with Playwright"
+authors: [nitya, debbie]
 tags: [swa, 30days, dev-tools]
 draft: true 
 ---
 Welcome to `Week 3, Day 2` of **#30DaysOfSWA**!! 
 
-Yesterday we talked about .... Today we'll explore ...
+Yesterday we kicked off Developer Tools week talking about the end-to-end Developer Experience from creating applications, to building, testing, deploying, and auditing, them for effective and scalable use.  Today we'll focus on the **testing** segment, and talk about how you can use [Playwright](https://www.playwright.dev) with your Azure Static Web App, to get the benefits of test automation with cross-browser coverage.
 
 
 ## What We'll Cover
- * 
- * 
- * 
- * **Exercise** 
- * **Resource(s):** 
+ * Test Automation for Modern Web Apps
+ * What is Playwright?
+ * Playwright Quickstart
+ * Playwright Developer Tools
+ * Using Playwright with SWA
+ * **Exercise**: Try the Tutorial with **your** deployed app.
 
 ![](../static/img/series/banner.png)
+
+## Test Automation
+
+Unlike platform-native applications, modern web applications have to work consistently and correctly across a wide variety of browser and device platforms. Testing your application be
+
+Test Automation is the process of executing tests automatically to validate product **functionality**, then using those testing insights to iteratively improve product **quality**. Test Automation is a key component o
+
+
+## Quickstart
