Week 3, Day 2 => Reviewed

--- a/www/blog/2021-05-17.md
+++ b/www/blog/2021-05-17.md
@@ -2,8 +2,8 @@
 slug: devtools-playwright
 title: "#16: Test Automation with Playwright"
 authors: [nitya, debbie]
-tags: [swa, 30days, dev-tools]
-draft: true 
+tags: [swa, 30days, dev-tools, playwright]
+draft: false
 ---
 Welcome to `Week 3, Day 2` of **#30DaysOfSWA**!! 
 
@@ -17,7 +17,7 @@ Yesterday we kicked off "Developer Tools" week by talking about the end-to-end d
  * Use Playwright with SWA
  * **Exercise**: Try the Tutorial with **your** deployed app.
 
-![](../static/img/series/banner.png)
+![](../static/img/series/16-banner.png)
 
 ## Test Automation
 
@@ -141,3 +141,10 @@ So where can we go next to skill up? We have you covered:
  * **Last but not least**, check out this talk from last year for more insights into End-to-End Testing for Playwright from the Azure Static Web Apps Team.
 
     <iframe  width="560" height="315" frameborder="0"  src="https://aka.ms/docs/player?ev=learn-tv-static-web-apps-code-to-scale&session=end-to-end-testing-with-playwright"></iframe>
+
+
+## Exercise
+
+Pick one of the apps you've built (or use) - preferably one that is currently deployed to Azure Static Web Apps so you can explore other scenarios later.
+
+[Walk through the same steps](https://github.com/fearlessly-dev/30daysofSWA-testing) with **your** deployed app - then try adding one new test script that goes beyond the starter test case. Look at the [demo](https://github.com/MarcusFelling/Demo.Playwright) project for inspiration!
