Week 3, Day 3 => Ready

--- a/www/blog/2021-05-18.md
+++ b/www/blog/2021-05-18.md
@@ -1,13 +1,15 @@
 ---
 slug: devtools-ado
 title: "#17: Multi-Stage Deploy with ADO"
-authors: []
+authors: [anthony]
 tags: [swa, 30days, dev-tools]
 draft: true 
 ---
 Welcome to `Week 3, Day 3` of **#30DaysOfSWA**!! 
 
-Yesterday we talked about .... Today we'll explore ...
+:::info From Microsoft Tech Community
+Check out the canonical version of this post on the **[Apps On Azure](https://techcommunity.microsoft.com/t5/apps-on-azure-blog/multi-stage-azure-static-web-apps-deployments-with-azure-devops/ba-p/3390625)** Tech Community Blog along with other articles on the topic of **[Web Apps](https://techcommunity.microsoft.com/t5/apps-on-azure-blog/bg-p/AppsonAzureBlog/label-name/Web%20Apps)**
+:::
 
 
 ## What We'll Cover
@@ -18,7 +20,7 @@ Yesterday we talked about .... Today we'll explore ...
  * Deploy to production
  * **Exercise.** Explore the [Demo Application Source](https://github.com/anthonychu/swa-devops-pipeline-demo) and try it out!
 
-![](../static/img/series/banner.png)
+![](../static/img/series/17-banner.png)
 
 Azure Static Web Apps recently introduced the ability to automatically configure an Azure DevOps pipeline to build and deploy your app. It's a great way to get your app up and running quickly.
 
@@ -42,8 +44,8 @@ We'll use a .NET 6 full-stack application.
 
 To follow along, import the repository into your Azure DevOps project. You can use similar steps for a Node.js app.
 
-:::info
-Source code: [https://github.com/anthonychu/swa-devops-pipeline-demo](https://github.com/anthonychu/swa-devops-pipeline-demo).
+:::info **Source Code Available**
+Check out the code at: **[@anthonychu/swa-devops-pipeline-demo](https://github.com/anthonychu/swa-devops-pipeline-demo)**.
 :::
 
 
