Week 3, Day 3 => Reviewed

--- a/www/blog/2021-05-18.md
+++ b/www/blog/2021-05-18.md
@@ -3,7 +3,7 @@ slug: devtools-ado
 title: "#17: Multi-Stage Deploy with ADO"
 authors: [anthony]
 tags: [swa, 30days, dev-tools]
-draft: true 
+draft: false 
 ---
 Welcome to `Week 3, Day 3` of **#30DaysOfSWA**!! 
 
