Week 3, Day 5/6/7 Setup

--- a/www/blog/2021-05-20.md
+++ b/www/blog/2021-05-20.md
@@ -1,7 +1,7 @@
 ---
 slug: devtools-swacli-develop
 title: "#19: Develop with SWA CLI"
-authors: []
+authors: [yohan, wassim]
 tags: [swa, 30days, dev-tools]
 draft: true 
 ---
@@ -11,10 +11,10 @@ Yesterday we talked about .... Today we'll explore ...
 
 
 ## What We'll Cover
- * 
- * 
- * 
- * **Exercise** 
- * **Resource(s):** 
+ * `swa` - One command to rule them all!
+ * Creating the configuration
+ * Building your project
+ * Running your app locally
+ * **Exercise**: Use the new `swa` CLI to build and run a starter app!
 
 ![](../static/img/series/banner.png)
