--- a/www/blog/2021-05-21.md
+++ b/www/blog/2021-05-21.md
@@ -1,7 +1,7 @@
 ---
 slug: devtools-swacli-deploy
 title: "#20: Deploy with SWA CLI"
-authors: []
+authors: [wassim, yohan]
 tags: [swa, 30days, dev-tools]
 draft: true 
 ---
@@ -11,10 +11,9 @@ Yesterday we talked about .... Today we'll explore ...
 
 
 ## What We'll Cover
- * 
- * 
- * 
- * **Exercise** 
- * **Resource(s):** 
+ * Logging in to Azure
+ * Deploying your app
+ * Environment variables
+ * **Exercise**: Use the new `swa` CLI to authenticate, and deploy your app
 
 ![](../static/img/series/banner.png)
