--- a/www/blog/2021-05-22.md
+++ b/www/blog/2021-05-22.md
@@ -1,7 +1,7 @@
 ---
 slug: devtools-vscode
 title: "#21: Develop With VSCode"
-authors: []
+authors: [alex]
 tags: [swa, 30days, dev-tools]
 draft: true 
 ---
@@ -12,10 +12,9 @@ Yesterday we talked about .... Today we'll explore ...
 
 
 ## What We'll Cover
- * 
- * 
- * 
- * **Exercise** 
- * **Resource(s):** 
+*
+*
+*
+* **Exercise:**
 
 ![](../static/img/series/banner.png)
