--- a/www/blog/2021-04-30.md
+++ b/www/blog/2021-04-30.md
@@ -8,9 +8,13 @@ draft: false
 
 ![](../static/img/swanniversary.png)
 
-#### View Schedule & Speaker Lineup: [https://aka.ms/swaanniversary](https://aka.ms/swaanniversary)
+:::info SWA ANNIVERSARY SCHEDULE & SPEAKERS
+View the latest Schedule & Speaker Lineup at [https://aka.ms/swaanniversary](https://aka.ms/swaanniversary)
+:::
+
 
 ---
+
 
 On May 12, 2021, the [Azure Static Web Apps](https://docs.microsoft.com/en-us/azure/static-web-apps/overview?WT.mc_id=30daysofswa-61155-cxall) service hit a significant milestone - [becoming generally available](https://azure.microsoft.com/en-us/updates/azure-static-web-apps-is-now-generally-available/?WT.mc_id=30daysofswa-61155-cxall) with support for many of the popular [front-end frameworks and static site generators](https://docs.microsoft.com/en-us/azure/static-web-apps/front-end-frameworks) used for modern web app development.
 
