--- a/www/blog/2021-05-19.md
+++ b/www/blog/2021-05-19.md
@@ -3,7 +3,7 @@ slug: devtools-msedge
 title: "#18: Debug with Edge DevTools"
 authors: [patrick]
 tags: [swa, 30days, dev-tools]
-draft: true 
+draft: false
 ---
 Welcome to `Week 3, Day 4` of **#30DaysOfSWA**!!
 
