--- a/www/blog/2021-05-18.md
+++ b/www/blog/2021-05-18.md
@@ -5,6 +5,19 @@ authors: [anthony]
 tags: [swa, 30days, dev-tools]
 draft: false 
 ---
+
+<head>
+  <meta name="twitter:url" content="https://www.azurestaticwebapps.dev/blog/devtools-ado" />
+  <meta name="twitter:title" content="#17: Multi-Stage Deployments With Azure DevOps" />
+  <meta name="twitter:description" content="Join @nthonyChu on #30DaysOfSWA as he walks us through multi-stage deployments of @AzureStaticApps using @AzureDevOps - with @PlaywrightWeb testing integrated!" />
+  <meta name="twitter:image" content="https://www.azurestaticwebapps.dev/assets/images/17-banner-2d8ecefdc1683370295255b3fa8a0df3.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:creator" content="@nitya" />
+  <meta name="twitter:site" content="@AzureStaticApps" /> 
+  <link rel="canonical" href="https://techcommunity.microsoft.com/t5/apps-on-azure-blog/multi-stage-azure-static-web-apps-deployments-with-azure-devops/ba-p/3390625" />
+</head>
+
+
 Welcome to `Week 3, Day 3` of **#30DaysOfSWA**!! 
 
 :::info From Microsoft Tech Community
