--- a/www/blog/2021-05-19.md
+++ b/www/blog/2021-05-19.md
@@ -4,7 +4,22 @@ title: "#18: Debug with Edge DevTools"
 authors: [patrick]
 tags: [swa, 30days, dev-tools]
 draft: false
+description: Learn to use Microsoft Edge DevTools and its VS Code Extension to debug you Azure Static Web App and improve performance and accessibility
+image: "../static/img/series/18-banner.png"
+keywords: [devtools, msedge, azure, staticwebapps, vscode]
 ---
+
+<head>
+  <meta name="twitter:url" content="https://www.azurestaticwebapps.dev/blog/devtools-msedge" />
+  <meta name="twitter:title" content="#18: Debug with Edge DevTools" />
+  <meta name="twitter:description" content="Join @patrickbrosset on #30DaysOfSWA to explore Debugging, Perf, #Accessibility for @AzureStaticApps using @MSEdgeDev #DevTools on @code" />
+  <meta name="twitter:image" content="https://www.azurestaticwebapps.dev/assets/images/18-banner-3c83eb95b9d1aabe5f27d4282c5423ad.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:creator" content="@nitya" />
+  <meta name="twitter:site" content="@AzureStaticApps" /> 
+  <link rel="canonical" href="https://www.azurestaticwebapps.dev/blog/devtools-msedge" />
+</head>
+
 Welcome to `Week 3, Day 4` of **#30DaysOfSWA**!!
 
 :::info GLOBAL ACCESSIBILITY AWARENESS DAY
